# bevy-jam-1

./: AGENTS.md  Cargo.toml  README.md
Bevy/Crates/Game/: Cargo.toml
Bevy/Crates/Game/Runtime/: Main.rs
Bevy/Crates/Game/Runtime/Bundles/: CloudBundle.rs  EnemyBundle.rs  PlaneBundle.rs  PlayerBundle.rs  TerrainBundle.rs  TerrainGridBundle.rs
Bevy/Crates/Game/Runtime/Components/: BulletComponent.rs  BulletFromEnemyComponent.rs  BulletFromPlayerComponent.rs  CameraAdvancedComponent.rs  CloudComponent.rs  EnemyComponent.rs  EnemyTextureTintComponent.rs  EnemyVisualComponent.rs  GameResetComponent.rs  GameSceneComponent.rs  HealthComponent.rs  HealthDyingComponent.rs  InputComponent.rs  NuclearResetComponent.rs  ParticleComponent.rs  ParticlesAdvancedComponent.rs  PlaneComponent.rs  PlanePropellerComponent.rs  PlaneTextureTintComponent.rs  PlaneVisualComponent.rs  PlayerComponent.rs  PlayerVisualComponent.rs  PropellerComponent.rs  ResetGameComponent.rs  UIHUDFpsTextComponent.rs  UIHUDKeyTextComponent.rs  UIHUDTextComponent.rs  UIMiniMapComponent.rs  (+3 more)
Bevy/Crates/Game/Tests/: AudioTests.rs  AutopilotTests.rs  BulletPluginTests.rs  BulletTests.rs  CameraAdvancedPluginTests.rs  CloudTests.rs  EnemyPluginTests.rs  EnemyTests.rs  HealthPluginTests.rs  HealthTests.rs  InputPluginTests.rs  ModelAssetTests.md  ModelAssetTests.rs  PlayerPluginTests.rs  PlayerTests.rs  PropellerPluginTests.rs  UIMiniMapPluginTests.rs  UIMiniMapTests.rs  UIReticlesPluginTests.rs  UIReticlesTests.rs  UIToastPluginTests.rs  UIToastTests.rs  WorldPluginCloudTests.rs  WorldPluginTerrainTests.rs
(+95 files in other folders)
